[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/fart16.png" type="Texture" id=1]
[ext_resource path="res://Fart.gd" type="Script" id=2]
[ext_resource path="res://stamina_bar_theme.tres" type="Theme" id=3]
[ext_resource path="res://Sprites/Subtract.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 4.51769

[sub_resource type="CircleShape2D" id=2]
radius = 5.57691

[sub_resource type="CircleShape2D" id=3]
radius = 6.0

[node name="Fart" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HazardArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardArea"]
shape = SubResource( 2 )

[node name="FallzoneTimer" type="Timer" parent="."]

[node name="RayCastWall" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 2

[node name="StaminaBar" type="ProgressBar" parent="."]
visible = false
margin_left = -5.4824
margin_top = -9.25791
margin_right = 5.5176
margin_bottom = -7.25791
theme = ExtResource( 3 )
value = 20.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaminaWheel" type="TextureProgress" parent="."]
margin_left = -3.83799
margin_top = -13.826
margin_right = 494.162
margin_bottom = 484.174
rect_scale = Vector2( 0.015, 0.015 )
value = 40.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
fill_mode = 4
tint_under = Color( 0.121569, 0.121569, 0.121569, 0.686275 )
tint_progress = Color( 0.027451, 0.67451, 0, 1 )

[node name="RopeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="RopeArea"]
shape = SubResource( 3 )

[connection signal="body_entered" from="HazardArea" to="." method="_on_HazardArea_body_entered"]
[connection signal="timeout" from="FallzoneTimer" to="." method="_on_FallzoneTimer_timeout"]
[connection signal="area_entered" from="RopeArea" to="." method="_on_RopeArea_area_entered"]
[connection signal="area_exited" from="RopeArea" to="." method="_on_RopeArea_area_exited"]
